force-app/main/default/objects/Case/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <description>Banking service category used for priority and SLA rules.</description>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card Dispute</fullName>
            </value>
            <value>
                <fullName>Fraud Alert</fullName>
            </value>
            <value>
                <fullName>Loan Inquiry</fullName>
            </value>
            <value>
                <fullName>Account Servicing</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>