force-app/main/default/objects/Case/fields/SLA_Due__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due__c</fullName>
    <description>Calculated by CaseService from Case Priority Rules.</description>
    <label>SLA Due</label>
    <type>DateTime</type>
</CustomField>