force-app/main/default/objects/Case/fields/Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference__c</fullName>
    <description>Synthetic card transaction reference used to detect duplicate open disputes.</description>
    <label>Transaction Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>